# ai-council

./: .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
ai_council/: main.py
ai_council/agents/: primitive_agent.py
ai_council/config/: __init__.py
ai_council/graph/: compile_graph.py  router.py
ai_council/graph/nodes/: agent_node_factory.py
ai_council/graph/states/: general_state.py
ai_council/tools/: qdrant_tools.py
ai_council/utils/: logger.py
