[project]
name = "ai-council"
version = "0.1.0"
description = "AI council of primitive agents evolving through interactions"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "pydantic",
    "langchain>=1.0",
    "langgraph>=1.0",
    "langchain-ollama",
    "langchain-qdrant",
    "qdrant-client",
    "langchain-google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"